@@ -1,3 +1,5 @@
+ - Add support for dynamically choosing the linear algebra backend
+ - Add Epetra/Trilinos linear solvers
  - Add setrow() to matrix interface
  - Add new solver SingularSolver for solving singular (pressure) systems
  - Add MeshSize::min() for easy computation of smallest mesh size
@@ -7,6 +9,7 @@
  - Improve solve() function, now handles both LU and Krylov + preconditioners
  - Add ALE mesh interpolation (moving mesh according to new boundary coordinates)
 0.7.3 [2008-04-30]
+ - Add support for Epetra/Trilinos
  - Bug fix for order of values in interpolate_vertex_values, now according to UFC
  - Boundary meshes are now always oriented with respect to outward facet normals
  - Improved linear algebra, both in C++ and Python
